=======
CHANGES
=======

1.0.0a4 (unreleased)
--------------------

- Nothing changed yet.


1.0.0a3 (2013-02-28)
--------------------

- Changed manifest to actually include the page templates.


1.0.0a2 (2013-02-28)
--------------------

- Added version Trove classifiers.


1.0.0a1 (2013-02-28)
--------------------

- Dropped support for Python 2.4 and 2.5, added Python 3.3 support.

- Removed dependencies on ``zope.app`` packages.


0.8.1 (2011-01-21)
------------------

- Bugfix: Did not handle unicode IUser.login values.

- Fixed DeprecationWarnings.


0.8.0 (2010-01-25)
------------------

- Security Fix: move camefrom url to a session variable instead of exposing
  the url in the login form. Because the camefrom url is built at server side
  based on local information and will always only use internal traversal names.
  Exposing this camefrom query in the login url gives others only a point to
  attack because it could be simply set by a unfriendly domain with a custom
  url. This is much better since such a unfriendly 3rd party domain url doesn't
  get redirected by default based on the changes in zope.publisher's redirect
  method. (zope.publisher 3.9.3 does only redirect to urls located in the same
  domain by default)

  Remove all camefrom widgets and queries in our custom forms if you use any.
  You can just set and get the camefrom session variable in your custom forms
  if you need to.

0.7.2 (2010-01-26)
------------------

- Bugfix: Failed miserably on challenge on pages having non-ASCII names.

0.7.1 (2009-08-19)
------------------

- Bugfix: the method specialGroups applied groups everytime the method get
  called even if the group was already applied. This is a problem if the
  global shared unauthenticated principal instance is used because it will
  apply similar groups till the server get restarted and a new principal
  instance is used.

- Feature: added getUserByLogin to IUserContainer
