@@ -2,8 +2,6 @@
     xmlns="http://namespaces.zope.org/zope"
     i18n_domain="z3c">
 
-  <include package=".generations" />
-
   <class class=".authentication.Authenticator">
     <implements
         interface="zope.annotation.interfaces.IAttributeAnnotatable"
